Adding static code analysis (#5)
* Added config for static code analysis

* Fixed checkstyle warnings

* Fixed checkstyle warnings #2

* Using world-writable directory on Linux

* Fixed build on Windows

* Added copyright and jacoco limits

Co-authored-by: Ivan Vakhrushev <i.vakhrushev@banki.ru>
Co-authored-by: Ivan Vakhrushev <mfvanek@gmail.com>