@@ -1,6 +1,8 @@
 /*
- * Copyright (c) 2018. Ivan Vakhrushev. All rights reserved.
- * https://github.com/mfvanek
+ * Copyright (c) 2018-2022. Ivan Vakhrushev. All rights reserved.
+ * https://github.com/mfvanek/two-levels-caching
+ *
+ * Licensed under the Apache License 2.0
  */
 
 package com.mfvanek.caching.impl;
@@ -11,7 +13,6 @@ import com.mfvanek.caching.models.Movie;
 import com.mfvanek.caching.models.Movies;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -22,7 +23,7 @@ class TwoLevelsCacheTest extends BaseCacheTest {
 
     @Test
     @Override
-    final void putOnlyValue() throws Exception {
+    final void putOnlyValue() {
         final Cache<String, Movie> cache = createCache(1.0f);
 
         List<Movie> evictedItems = cache.put(SNOWDEN);
@@ -44,14 +45,14 @@ class TwoLevelsCacheTest extends BaseCacheTest {
         evictedItems = cache.put(ARRIVAL);
         assertEquals(3, cache.size());
         assertEquals(2, evictedItems.size());
-        assertIterableEquals(Arrays.asList(SNOWDEN, AQUAMAN), evictedItems);
+        assertIterableEquals(List.of(SNOWDEN, AQUAMAN), evictedItems);
         assertTrue(cache.containsKey(Movies.ARRIVAL_IMDB));
         assertTrue(cache.containsKey(Movies.INTERSTELLAR_IMDB));
     }
 
     @Test
     @Override
-    final void size() throws Exception {
+    final void size() {
         final Cache<String, Movie> cache = createCache();
         assertEquals(0, cache.size());
 
@@ -72,7 +73,7 @@ class TwoLevelsCacheTest extends BaseCacheTest {
     }
 
     @Test
-    void containsKeyInSecondLevel() throws Exception {
+    void containsKeyInSecondLevel() {
         final Cache<String, Movie> cache = createCache(1);
         cache.put(AQUAMAN);
         cache.put(SNOWDEN);
@@ -83,23 +84,26 @@ class TwoLevelsCacheTest extends BaseCacheTest {
     }
 
     @Override
-    protected Cache<String, Movie> createCache() throws Exception {
+    protected Cache<String, Movie> createCache() {
         return createCache(MAX_SIZE);
     }
 
     @Override
-    protected Cache<String, Movie> createCache(int maxSize) throws Exception {
+    protected Cache<String, Movie> createCache(final int maxSize) {
         return createCache(maxSize, 0.1f);
     }
 
-    private static Cache<String, Movie> createCache(float evictionFactor) throws Exception {
+    private static Cache<String, Movie> createCache(final float evictionFactor) {
         return createCache(MAX_SIZE, evictionFactor);
     }
 
-    private static Cache<String, Movie> createCache(int maxSize, float evictionFactor) throws Exception {
-        final TwoLevelsCacheBuilder<String, Movie> builder = TwoLevelsCacheBuilder.getInstance(Movie.class);
-        return builder.setBaseDirectory(tempDir).setFirstLevelMaxSize(maxSize).setSecondLevelMaxSize(maxSize).
-                setFirstLevelEvictionFactor(evictionFactor).setSecondLevelEvictionFactor(evictionFactor).
-                build();
+    private static Cache<String, Movie> createCache(final int maxSize, final float evictionFactor) {
+        return TwoLevelsCacheBuilder.getInstance(Movie.class)
+                .setBaseDirectory(tempDir)
+                .setFirstLevelMaxSize(maxSize)
+                .setSecondLevelMaxSize(maxSize)
+                .setFirstLevelEvictionFactor(evictionFactor)
+                .setSecondLevelEvictionFactor(evictionFactor)
+                .build();
     }
 }
